fix: client-스크롤바 layout shift 버그 수정

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -122,9 +122,14 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    scrollbar-gutter: stable;
   }
   body {
     @apply bg-background text-foreground;
+  }
+  body[data-scroll-locked] {
+    margin-right: 0px !important;
+    overflow: visible !important;
   }
 }
 input.input-removeArrow[type="number"]::-webkit-inner-spin-button,
